[gd_scene load_steps=36 format=4 uid="uid://bsvmcg7tve1ce"]

[ext_resource type="Script" uid="uid://b6xa7xjibvmwl" path="res://level/level.gd" id="1_86fpb"]
[ext_resource type="PackedScene" uid="uid://by6shmnqpsrfb" path="res://bubble/Bubble.tscn" id="2_tevya"]
[ext_resource type="PackedScene" uid="uid://bplmdr4p6ufdx" path="res://enviroment/Door.tscn" id="3_xpghx"]
[ext_resource type="PackedScene" uid="uid://yjbwuqjtaysl" path="res://enviroment/Image.tscn" id="4_e3vny"]
[ext_resource type="Texture2D" uid="uid://cvrgrvo3ksjlt" path="res://assets/tiles/floor.png" id="5_f6ucb"]
[ext_resource type="Texture2D" uid="uid://dflwiyo680syw" path="res://assets/tiles/ground.png" id="6_jyx7k"]
[ext_resource type="Texture2D" uid="uid://bttw3w6643hu0" path="res://assets/tiles/platform.png" id="7_4w05f"]
[ext_resource type="Texture2D" uid="uid://cw5amvei12jeq" path="res://assets/tiles/soap_floor.png" id="8_vmjut"]
[ext_resource type="Texture2D" uid="uid://d3r0fadsvxqy7" path="res://assets/tiles/wood_pillar_left.png" id="9_rh8be"]
[ext_resource type="Texture2D" uid="uid://bc71t336a1j7g" path="res://assets/tiles/wood_pillar_right.png" id="10_vffyd"]
[ext_resource type="Texture2D" uid="uid://dqc5pfmbv6xkk" path="res://assets/tiles/wood_pillar.png" id="11_8du73"]
[ext_resource type="Texture2D" uid="uid://bo46rhtbpx722" path="res://assets/tiles/wall_tile.png" id="12_q1w4r"]
[ext_resource type="Texture2D" uid="uid://cs2xkgk2ypyae" path="res://assets/tiles/wall-crack1.png" id="13_tnse0"]
[ext_resource type="Texture2D" uid="uid://diqso3c1g4tc2" path="res://assets/tiles/wall-crack2.png" id="14_mak1t"]
[ext_resource type="Texture2D" uid="uid://jtfvmh8fci8q" path="res://assets/envirnoment/sconce.png" id="15_xiwa8"]
[ext_resource type="Texture2D" uid="uid://doac83wsid4js" path="res://assets/envirnoment/wood_horizontal_pillar.png" id="16_p7ajl"]
[ext_resource type="PackedScene" uid="uid://bt6k4w8em0cg5" path="res://enviroment/Fire.tscn" id="17_o6j0w"]
[ext_resource type="PackedScene" uid="uid://bumdgibs4pj3k" path="res://enviroment/Torch.tscn" id="18_7fmkw"]
[ext_resource type="PackedScene" uid="uid://dwycr7lehl7fi" path="res://player/Player.tscn" id="19_m7i73"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yhoha"]
texture = ExtResource("5_f6ucb")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 15.7331, 15.7331, -15.7331, 15.7331)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7h46g"]
texture = ExtResource("6_jyx7k")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_grihn"]
texture = ExtResource("7_4w05f")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(7.1875, -6.9375, 7.3125, -2.6875, 16, -2.65165, 16, -6.89429)
0:0/0/physics_layer_0/polygon_0/one_way = true
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -7.125, -16, -3.375, 16, -3.375, 16, -7.375)
1:0/0/physics_layer_0/polygon_0/one_way = true
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -7.6014, -6.89429, -7.6014, -6.89429, -3.0052, -16, -3.0052)
2:0/0/physics_layer_0/polygon_0/one_way = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_unm66"]
texture = ExtResource("8_vmjut")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, -7.75, -16, -7.5)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1ihia"]
texture = ExtResource("9_rh8be")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 0, -16, 0, 16, -16, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jeth1"]
texture = ExtResource("10_vffyd")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.353554, -16, 0.353554, 16, 16, 16, 16, -16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qr5ob"]
texture = ExtResource("11_8du73")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_pjfnp"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 2147483648
sources/0 = SubResource("TileSetAtlasSource_yhoha")
sources/1 = SubResource("TileSetAtlasSource_7h46g")
sources/2 = SubResource("TileSetAtlasSource_grihn")
sources/3 = SubResource("TileSetAtlasSource_unm66")
sources/5 = SubResource("TileSetAtlasSource_1ihia")
sources/6 = SubResource("TileSetAtlasSource_jeth1")
sources/7 = SubResource("TileSetAtlasSource_qr5ob")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3ly6e"]
texture = ExtResource("6_jyx7k")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d6to8"]
texture = ExtResource("12_q1w4r")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wykxp"]
texture = ExtResource("13_tnse0")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d5jj6"]
texture = ExtResource("14_mak1t")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_bjiel"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_3ly6e")
sources/1 = SubResource("TileSetAtlasSource_d6to8")
sources/2 = SubResource("TileSetAtlasSource_wykxp")
sources/3 = SubResource("TileSetAtlasSource_d5jj6")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dpxjl"]
texture = ExtResource("15_xiwa8")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_37psk"]
texture = ExtResource("16_p7ajl")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ovc38"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_dpxjl")
sources/1 = SubResource("TileSetAtlasSource_37psk")

[node name="Level5" type="Node2D"]
script = ExtResource("1_86fpb")
bubble_scene = ExtResource("2_tevya")
next_level = "res://level//Level6.tscn"

[node name="Door" parent="." instance=ExtResource("3_xpghx")]
position = Vector2(719, 296)
scale = Vector2(4, 4)

[node name="Image" parent="." instance=ExtResource("4_e3vny")]
position = Vector2(151, 356)
scale = Vector2(2.5, 2.5)
image_texture = "res://assets/hints/float_hint.png"

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Foreground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAA8AAQAAAAAAAAAAABAAAQAAAAAAAAAAABEAAQAAAAAAAAAAABIAAQAAAAAAAAABAA8AAQAAAAAAAAABABAAAQAAAAAAAAABABEAAQAAAAAAAAABABIAAQAAAAAAAAACAA8AAQAAAAAAAAACABAAAQAAAAAAAAACABEAAQAAAAAAAAACABIAAQAAAAAAAAADAA8AAQAAAAAAAAADABAAAQAAAAAAAAADABEAAQAAAAAAAAADABIAAQAAAAAAAAAEAA8AAQAAAAAAAAAEABAAAQAAAAAAAAAEABEAAQAAAAAAAAAEABIAAQAAAAAAAAAFAA8AAQAAAAAAAAAFABAAAQAAAAAAAAAFABEAAQAAAAAAAAAFABIAAQAAAAAAAAAGAA8AAQAAAAAAAAAGABAAAQAAAAAAAAAGABEAAQAAAAAAAAAGABIAAQAAAAAAAAAHABAAAQAAAAAAAAAHABEAAQAAAAAAAAAHABIAAQAAAAAAAAAIABEAAQAAAAAAAAAIABIAAQAAAAAAAAAJABIAAQAAAAAAAAAVAA8AAQAAAAAAAAAVABAAAQAAAAAAAAAVABEAAQAAAAAAAAAVABIAAQAAAAAAAAAWAA8AAQAAAAAAAAAWABAAAQAAAAAAAAAWABEAAQAAAAAAAAAWABIAAQAAAAAAAAAXAA8AAQAAAAAAAAAXABAAAQAAAAAAAAAXABEAAQAAAAAAAAAXABIAAQAAAAAAAAAYAA8AAQAAAAAAAAAYABAAAQAAAAAAAAAYABEAAQAAAAAAAAAYABIAAQAAAAAAAAAAAA4AAAAAAAAAAAABAA4AAAAAAAAAAAACAA4AAAAAAAAAAAADAA4AAAAAAAAAAAAEAA4AAAAAAAAAAAAFAA4AAAAAAAAAAAAGAA4AAAAAAAAAAAAZAA0ABQAAAAAAAAAZAAwABQAAAAAAAAAZAAsABQAAAAAAAAAZAAoABQAAAAAAAAAZAAkABQAAAAAAAAAZAAgABQAAAAAAAAAZAAcABQAAAAAAAAAZAAYABQAAAAAAAAAZAAUABQAAAAAAAAAZAAQABQAAAAAAAAAZAAMABQAAAAAAAAAZAAIABQAAAAAAAAAZAAEABQAAAAAAAAD//w0ABgAAAAAAAAD//wwABgAAAAAAAAD//wsABgAAAAAAAAD//woABgAAAAAAAAD//wkABgAAAAAAAAD//wgABgAAAAAAAAD//wcABgAAAAAAAAD//wYABgAAAAAAAAD//wUABgAAAAAAAAD//wQABgAAAAAAAAD//wMABgAAAAAAAAD//wIABgAAAAAAAAD//wEABgAAAAAAAAAYAAwAAQAAAAAAAAAYAA0AAQAAAAAAAAAYAA4AAQAAAAAAAAAXAA4AAQAAAAAAAAAXAA0AAQAAAAAAAAAXAAwAAQAAAAAAAAAWAAwAAQAAAAAAAAAWAA0AAQAAAAAAAAAWAA4AAQAAAAAAAAAVAA4AAQAAAAAAAAAVAA0AAQAAAAAAAAAVAAwAAQAAAAAAAAAJABEAAAAAAAAAAAAIABAAAAAAAAAAAAAHAA8AAAAAAAAAAAAVAAsAAAAAAAAAAAAWAAsAAAAAAAAAAAAXAAsAAAAAAAAAAAAYAAsAAAAAAAAAAAAUABEABgAAAAAAAAAUABAABgAAAAAAAAAUAA8ABgAAAAAAAAAUAA4ABgAAAAAAAAAUAA0ABgAAAAAAAAAUAAwABgAAAAAAAAAUAAsABgAAAAAAAAD//wAABgAAAAAAAAAZAAAABQAAAAAAAAAZAP//BQAAAAAAAAAZAP7/BQAAAAAAAAAZAP3/BQAAAAAAAAAZAPz/BQAAAAAAAAD/////BgAAAAAAAAD///7/BgAAAAAAAAD///3/BgAAAAAAAAD///z/BgAAAAAAAAAAAPz/AAAAAAAAAAABAPz/AAAAAAAAAAACAPz/AAAAAAAAAAADAPz/AAAAAAAAAAAEAPz/AAAAAAAAAAAFAPz/AAAAAAAAAAAGAPz/AAAAAAAAAAAHAPz/AAAAAAAAAAAIAPz/AAAAAAAAAAAJAPz/AAAAAAAAAAAKAPz/AAAAAAAAAAALAPz/AAAAAAAAAAAMAPz/AAAAAAAAAAANAPz/AAAAAAAAAAAOAPz/AAAAAAAAAAAPAPz/AAAAAAAAAAAQAPz/AAAAAAAAAAARAPz/AAAAAAAAAAASAPz/AAAAAAAAAAATAPz/AAAAAAAAAAAUAPz/AAAAAAAAAAAVAPz/AAAAAAAAAAAWAPz/AAAAAAAAAAAXAPz/AAAAAAAAAAAYAPz/AAAAAAAAAAAKABIAAAAAAAAAAAAUABIABgAAAAAAAAA=")
tile_set = SubResource("TileSet_pjfnp")

[node name="Background" type="TileMapLayer" parent="."]
z_index = -50
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAYAAQAAAAAAAAAAAAcAAQAAAAAAAAAAAAgAAQAAAAAAAAAAAAkAAQAAAAAAAAAAAAoAAQAAAAAAAAAAAAsAAQAAAAAAAAAAAAwAAQAAAAAAAAAAAA0AAQAAAAAAAAABAAAAAQAAAAAAAAABAAEAAQAAAAAAAAABAAIAAQAAAAAAAAABAAMAAQAAAAAAAAABAAQAAQAAAAAAAAABAAUAAQAAAAAAAAABAAYAAQAAAAAAAAABAAcAAQAAAAAAAAABAAgAAQAAAAAAAAABAAkAAQAAAAAAAAABAAoAAQAAAAAAAAABAAsAAQAAAAAAAAABAAwAAQAAAAAAAAABAA0AAQAAAAAAAAACAAAAAQAAAAAAAAACAAEAAQAAAAAAAAACAAMAAQAAAAAAAAACAAQAAQAAAAAAAAACAAUAAQAAAAAAAAACAAYAAQAAAAAAAAACAAcAAQAAAAAAAAACAAgAAQAAAAAAAAACAAkAAQAAAAAAAAACAAoAAQAAAAAAAAACAAsAAQAAAAAAAAACAAwAAQAAAAAAAAACAA0AAQAAAAAAAAADAAAAAQAAAAAAAAADAAEAAQAAAAAAAAADAAIAAQAAAAAAAAADAAMAAwAAAAAAAAADAAQAAQAAAAAAAAADAAUAAQAAAAAAAAADAAYAAQAAAAAAAAADAAcAAQAAAAAAAAADAAgAAQAAAAAAAAADAAkAAQAAAAAAAAADAAoAAQAAAAAAAAADAAsAAQAAAAAAAAADAAwAAQAAAAAAAAADAA0AAQAAAAAAAAAEAAAAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAIAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAUAAQAAAAAAAAAEAAYAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAgAAQAAAAAAAAAEAAkAAQAAAAAAAAAEAAoAAQAAAAAAAAAEAAsAAQAAAAAAAAAEAAwAAQAAAAAAAAAEAA0AAQAAAAAAAAAFAAAAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAMAAQAAAAAAAAAFAAQAAQAAAAAAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAAAAAAFAAcAAQAAAAAAAAAFAAgAAQAAAAAAAAAFAAkAAQAAAAAAAAAFAAoAAQAAAAAAAAAFAAsAAQAAAAAAAAAFAAwAAQAAAAAAAAAFAA0AAQAAAAAAAAAGAAAAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAMAAQAAAAAAAAAGAAQAAQAAAAAAAAAGAAUAAQAAAAAAAAAGAAYAAQAAAAAAAAAGAAcAAQAAAAAAAAAGAAgAAQAAAAAAAAAGAAkAAQAAAAAAAAAGAAoAAQAAAAAAAAAGAAsAAQAAAAAAAAAGAAwAAQAAAAAAAAAGAA0AAQAAAAAAAAAHAAAAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAYAAQAAAAAAAAAHAAcAAQAAAAAAAAAHAAgAAQAAAAAAAAAHAAkAAQAAAAAAAAAHAAoAAQAAAAAAAAAHAAsAAQAAAAAAAAAHAAwAAQAAAAAAAAAHAA0AAQAAAAAAAAAIAAAAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAYAAQAAAAAAAAAIAAcAAQAAAAAAAAAIAAgAAQAAAAAAAAAIAAkAAQAAAAAAAAAIAAoAAQAAAAAAAAAIAAsAAQAAAAAAAAAIAAwAAQAAAAAAAAAIAA0AAQAAAAAAAAAJAAAAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAcAAQAAAAAAAAAJAAgAAQAAAAAAAAAJAAkAAQAAAAAAAAAJAAoAAQAAAAAAAAAJAAsAAQAAAAAAAAAJAAwAAQAAAAAAAAAJAA0AAQAAAAAAAAAKAAAAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAIAAgAAAAAAAAAKAAMAAQAAAAAAAAAKAAQAAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAYAAQAAAAAAAAAKAAcAAQAAAAAAAAAKAAgAAQAAAAAAAAAKAAkAAQAAAAAAAAAKAAoAAQAAAAAAAAAKAAsAAQAAAAAAAAAKAAwAAwAAAAAAAAAKAA0AAQAAAAAAAAALAAAAAQAAAAAAAAALAAEAAQAAAAAAAAALAAIAAQAAAAAAAAALAAMAAQAAAAAAAAALAAQAAQAAAAAAAAALAAUAAQAAAAAAAAALAAYAAQAAAAAAAAALAAcAAQAAAAAAAAALAAgAAQAAAAAAAAALAAkAAQAAAAAAAAALAAoAAQAAAAAAAAALAAsAAQAAAAAAAAALAAwAAQAAAAAAAAALAA0AAQAAAAAAAAAMAAAAAQAAAAAAAAAMAAEAAQAAAAAAAAAMAAIAAQAAAAAAAAAMAAMAAQAAAAAAAAAMAAQAAQAAAAAAAAAMAAUAAQAAAAAAAAAMAAYAAQAAAAAAAAAMAAcAAQAAAAAAAAAMAAgAAQAAAAAAAAAMAAkAAQAAAAAAAAAMAAoAAQAAAAAAAAAMAAsAAQAAAAAAAAAMAAwAAQAAAAAAAAAMAA0AAQAAAAAAAAANAAAAAQAAAAAAAAANAAEAAQAAAAAAAAANAAIAAQAAAAAAAAANAAMAAQAAAAAAAAANAAQAAQAAAAAAAAANAAUAAQAAAAAAAAANAAYAAQAAAAAAAAANAAcAAQAAAAAAAAANAAgAAQAAAAAAAAANAAkAAQAAAAAAAAANAAoAAQAAAAAAAAANAAsAAQAAAAAAAAANAAwAAQAAAAAAAAANAA0AAQAAAAAAAAAOAAAAAQAAAAAAAAAOAAEAAQAAAAAAAAAOAAIAAQAAAAAAAAAOAAMAAQAAAAAAAAAOAAQAAQAAAAAAAAAOAAUAAQAAAAAAAAAOAAYAAQAAAAAAAAAOAAcAAQAAAAAAAAAOAAgAAQAAAAAAAAAOAAkAAQAAAAAAAAAOAAoAAQAAAAAAAAAOAAsAAQAAAAAAAAAOAAwAAQAAAAAAAAAOAA0AAQAAAAAAAAAPAAAAAQAAAAAAAAAPAAEAAQAAAAAAAAAPAAIAAQAAAAAAAAAPAAMAAQAAAAAAAAAPAAQAAQAAAAAAAAAPAAUAAQAAAAAAAAAPAAYAAQAAAAAAAAAPAAcAAQAAAAAAAAAPAAgAAQAAAAAAAAAPAAkAAQAAAAAAAAAPAAoAAQAAAAAAAAAPAAsAAgAAAAAAAAAPAAwAAQAAAAAAAAAPAA0AAQAAAAAAAAAQAAAAAQAAAAAAAAAQAAEAAQAAAAAAAAAQAAIAAQAAAAAAAAAQAAMAAQAAAAAAAAAQAAQAAQAAAAAAAAAQAAUAAQAAAAAAAAAQAAYAAQAAAAAAAAAQAAcAAQAAAAAAAAAQAAgAAQAAAAAAAAAQAAkAAQAAAAAAAAAQAAoAAQAAAAAAAAAQAAsAAQAAAAAAAAAQAAwAAQAAAAAAAAAQAA0AAQAAAAAAAAARAAAAAQAAAAAAAAARAAEAAQAAAAAAAAARAAIAAQAAAAAAAAARAAMAAQAAAAAAAAARAAQAAQAAAAAAAAARAAUAAQAAAAAAAAARAAYAAQAAAAAAAAARAAcAAQAAAAAAAAARAAgAAQAAAAAAAAARAAkAAQAAAAAAAAARAAoAAQAAAAAAAAARAAsAAQAAAAAAAAARAAwAAQAAAAAAAAARAA0AAQAAAAAAAAASAAAAAQAAAAAAAAASAAEAAQAAAAAAAAASAAIAAQAAAAAAAAASAAMAAQAAAAAAAAASAAQAAQAAAAAAAAASAAUAAQAAAAAAAAASAAYAAQAAAAAAAAASAAcAAQAAAAAAAAASAAgAAQAAAAAAAAASAAkAAQAAAAAAAAASAAoAAQAAAAAAAAASAAsAAQAAAAAAAAASAAwAAQAAAAAAAAASAA0AAQAAAAAAAAATAAAAAQAAAAAAAAATAAEAAQAAAAAAAAATAAIAAQAAAAAAAAATAAMAAQAAAAAAAAATAAQAAQAAAAAAAAATAAUAAQAAAAAAAAATAAYAAQAAAAAAAAATAAcAAQAAAAAAAAATAAgAAQAAAAAAAAATAAkAAQAAAAAAAAATAAoAAQAAAAAAAAATAAsAAQAAAAAAAAATAAwAAQAAAAAAAAATAA0AAQAAAAAAAAAUAAAAAQAAAAAAAAAUAAEAAQAAAAAAAAAUAAIAAQAAAAAAAAAUAAMAAQAAAAAAAAAUAAQAAQAAAAAAAAAUAAUAAQAAAAAAAAAUAAYAAQAAAAAAAAAUAAcAAQAAAAAAAAAUAAgAAQAAAAAAAAAUAAkAAQAAAAAAAAAUAAoAAQAAAAAAAAAUAAsAAQAAAAAAAAAUAAwAAQAAAAAAAAAUAA0AAQAAAAAAAAAVAAAAAQAAAAAAAAAVAAEAAQAAAAAAAAAVAAIAAQAAAAAAAAAVAAMAAQAAAAAAAAAVAAQAAQAAAAAAAAAVAAUAAQAAAAAAAAAVAAYAAQAAAAAAAAAVAAcAAQAAAAAAAAAVAAgAAQAAAAAAAAAVAAkAAQAAAAAAAAAVAAoAAQAAAAAAAAAVAAsAAQAAAAAAAAAVAAwAAQAAAAAAAAAVAA0AAQAAAAAAAAAWAAAAAQAAAAAAAAAWAAEAAQAAAAAAAAAWAAIAAQAAAAAAAAAWAAMAAgAAAAAAAAAWAAQAAQAAAAAAAAAWAAUAAQAAAAAAAAAWAAYAAQAAAAAAAAAWAAcAAQAAAAAAAAAWAAgAAQAAAAAAAAAWAAkAAQAAAAAAAAAWAAoAAQAAAAAAAAAWAAsAAQAAAAAAAAAWAAwAAQAAAAAAAAAWAA0AAQAAAAAAAAAXAAAAAQAAAAAAAAAXAAEAAQAAAAAAAAAXAAIAAQAAAAAAAAAXAAMAAQAAAAAAAAAXAAQAAQAAAAAAAAAXAAUAAQAAAAAAAAAXAAYAAQAAAAAAAAAXAAcAAQAAAAAAAAAXAAgAAQAAAAAAAAAXAAkAAQAAAAAAAAAXAAoAAQAAAAAAAAAXAAsAAQAAAAAAAAAXAAwAAQAAAAAAAAAXAA0AAQAAAAAAAAAYAAAAAQAAAAAAAAAYAAEAAQAAAAAAAAAYAAIAAQAAAAAAAAAYAAMAAQAAAAAAAAAYAAQAAQAAAAAAAAAYAAUAAQAAAAAAAAAYAAYAAQAAAAAAAAAYAAcAAQAAAAAAAAAYAAgAAQAAAAAAAAAYAAkAAQAAAAAAAAAYAAoAAQAAAAAAAAAYAAsAAQAAAAAAAAAYAAwAAQAAAAAAAAAYAA0AAQAAAAAAAAAHAA4AAQAAAAAAAAAIAA4AAQAAAAAAAAAJAA4AAQAAAAAAAAAKAA4AAQAAAAAAAAALAA4AAQAAAAAAAAAMAA4AAQAAAAAAAAANAA4AAQAAAAAAAAAOAA4AAQAAAAAAAAAPAA4AAQAAAAAAAAAQAA4AAQAAAAAAAAARAA4AAQAAAAAAAAASAA4AAQAAAAAAAAATAA4AAQAAAAAAAAAIAA8AAQAAAAAAAAAJAA8AAQAAAAAAAAAKAA8AAQAAAAAAAAALAA8AAQAAAAAAAAAMAA8AAQAAAAAAAAANAA8AAQAAAAAAAAAOAA8AAQAAAAAAAAAPAA8AAQAAAAAAAAAQAA8AAQAAAAAAAAARAA8AAQAAAAAAAAASAA8AAQAAAAAAAAATAA8AAQAAAAAAAAAJABAAAQAAAAAAAAAKABAAAQAAAAAAAAALABAAAQAAAAAAAAAMABAAAQAAAAAAAAANABAAAgAAAAAAAAAOABAAAQAAAAAAAAAPABAAAQAAAAAAAAAQABAAAQAAAAAAAAARABAAAQAAAAAAAAASABAAAQAAAAAAAAATABAAAQAAAAAAAAATABEAAQAAAAAAAAASABEAAQAAAAAAAAARABEAAQAAAAAAAAAQABEAAQAAAAAAAAAPABEAAQAAAAAAAAAOABEAAQAAAAAAAAANABEAAQAAAAAAAAAMABEAAQAAAAAAAAALABEAAQAAAAAAAAAKABEAAQAAAAAAAAAUAA4AAQAAAAAAAAAUAA8AAQAAAAAAAAAUABAAAQAAAAAAAAAUABEAAQAAAAAAAAALABIAAQAAAAAAAAAMABIAAQAAAAAAAAANABIAAQAAAAAAAAAOABIAAQAAAAAAAAAPABIAAQAAAAAAAAAQABIAAQAAAAAAAAARABIAAQAAAAAAAAASABIAAQAAAAAAAAATABIAAQAAAAAAAAAUABIAAQAAAAAAAAACAAIAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_bjiel")

[node name="Wall" type="TileMapLayer" parent="."]
z_index = -25
tile_map_data = PackedByteArray("AAAUAAgAAAAAAAAAAAAYAAgAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_ovc38")

[node name="Fire2" parent="." instance=ExtResource("17_o6j0w")]
position = Vector2(785, 245)

[node name="Fire" parent="." instance=ExtResource("17_o6j0w")]
position = Vector2(657, 246)

[node name="EnviromentalLight" type="DirectionalLight2D" parent="."]
energy = 0.2
blend_mode = 1

[node name="Torch" parent="." instance=ExtResource("18_7fmkw")]
position = Vector2(338, 384)

[node name="Torch2" parent="." instance=ExtResource("18_7fmkw")]
position = Vector2(497, 342)

[node name="StartingPosition" type="Node2D" parent="."]
position = Vector2(48, 421)

[node name="Bubbles" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("19_m7i73")]
position = Vector2(49, 416)
state = null
weapon_marker_position = null

[connection signal="door_opened" from="Door" to="." method="_on_door_opened"]
[connection signal="action_pressed" from="Player" to="." method="_on_player_action_pressed"]
[connection signal="action_released" from="Player" to="." method="_on_player_action_released"]
[connection signal="player_dropped" from="Player" to="." method="_on_player_player_dropped"]
